Put list trips behind auth
